<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:layout_marginHorizontal="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Word Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginEnd="2dp"
                android:textColor="@color/label_color"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/tvWordValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/word_content"
                android:textSize="16sp"
                android:layout_marginEnd="3dp"
                android:textColor="@color/content_color"/>

                <TextView
                    android:id="@+id/tvTypeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/type_content"
                    android:textSize="16sp"
                    android:textColor="@color/content_color"/>
            </LinearLayout>
        </LinearLayout>

<!--        definition row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/definition"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginEnd="2dp"
                android:textColor="@color/label_color"/>

            <TextView
                android:id="@+id/tvDefinitionValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/definition_content"
                android:textSize="16sp"
                android:textColor="@color/content_color"/>

        </LinearLayout>

        <!-- Description Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example"
                android:textStyle="bold"
                android:layout_marginEnd="2dp"
                android:textSize="14sp"
                android:textColor="@color/label_color"/>

            <TextView
                android:id="@+id/tvExampleValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/example_content"
                android:textSize="14sp"
                android:textColor="@color/content_color"/>
        </LinearLayout>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/card_divider_color" />

        <!-- Icons Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/btnSound"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/speaker_selector"
                android:layout_marginEnd="24dp"/>

            <ImageView
                android:id="@+id/btnCopy"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/copy_selector"
                android:layout_marginEnd="24dp"/>

            <ImageView
                android:id="@+id/btnFavorite"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/favorite_selector"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>